--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,7 @@
         <ImageView
             android:id="@+id/alphaImage"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:alpha="0.3"/>
+            android:layout_height="match_parent" />
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="50dp"
